photos should work better on mobile now, and carasell on home page should be fixed

--- a/css/main.css
+++ b/css/main.css
@@ -176,23 +176,25 @@ ul.posts span {
 }
 
 @media (max-width: 400px) {
-.item {
+#container .item {
 	width:100%;
 	min-width:100%;
 	margin: 10px;
+	border-color:white;
 }
 }
 
 @media (min-width: 400px) {
-.item {
+#container .item {
 	width:240px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 	margin:10px;
+	border-color:black;
 }
 }
 
-#fit-width .masonry {
+.gallery {
   margin: 0 auto;
 }
